syntax = "proto3";

package main;

option go_package = "./userpb"; 

service UserService {
    rpc GetAllUsers (GetAllUserRequest) returns (GetAllUserResponse);
    rpc GetUser (GetUserRequest) returns (User);
}

message GetAllUserRequest {
}

message User {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
}


message GetAllUserResponse {
 repeated User users = 1;
}

message GetUserRequest {
    int32 id = 1;
}
